<resources>
    <string name="app_name">NYT Articles</string>
    <string name="action_settings">Settings</string>
    <string name="filter_menu_title">Filter</string>
    <string name="sort_menu_title">Sort</string>
    <string name="retry_caps">RETRY</string>
    <string name="search">Search</string>
    <string name="load_articles_error">Unable to load articles. Please check internet connection or WiFi settings</string>
    <string name="article_search_hint">Search articles</string>
    <string name="sort_publish_date_newest_first">Newest First</string>
    <string name="sort_publish_date_oldest_first">Oldest First</string>

    <string name="filter_publish_date">Publish Date:</string>
    <string name="sort">Sort:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="save">Save</string>

    <string-array name="sort_array">
        <item>Newest First</item>
        <item>Oldest First</item>
    </string-array>
</resources>
