<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context="com.example.yoavgray.nytarticlefinder.fragments.FilterFragment" >

    <RelativeLayout
        android:id="@+id/relative_layout_date_pickers"
        android:background="@drawable/thumb_grid_item_background"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/text_view_filter_publish_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/filter_publish_date"/>

        <TextView
            android:id="@+id/text_view_from"
            android:layout_below="@id/text_view_filter_publish_date"
            android:text="@string/from"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_from_date"
            android:textStyle="bold"
            android:textColor="@color/materialBlue"
            tools:text="05/13/2000"
            android:layout_toRightOf="@id/text_view_from"
            android:layout_alignTop="@id/text_view_from"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_to"
            android:layout_toRightOf="@id/text_view_from_date"
            android:layout_alignTop="@id/text_view_from"
            android:text="@string/to"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_to_date"
            android:layout_toRightOf="@id/text_view_to"
            android:layout_alignTop="@id/text_view_from"
            android:textStyle="bold"
            android:textColor="@color/materialBlue"
            tools:text="05/13/2000"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_sort"
        android:layout_below="@id/relative_layout_date_pickers"
        android:text="@string/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="6dp"
        />

    <Spinner
        android:id="@+id/spinner_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_alignTop="@id/text_view_sort"
        android:layout_toRightOf="@id/text_view_sort" />

    <Button
        android:id="@+id/button_save_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="22sp"
        android:background="@android:color/transparent"
        android:layout_below="@id/text_view_sort"
        />

</RelativeLayout>
